<resources>
    <string name="app_name">Calorie Counter</string>

    <!-- Auth string -->
    <string name="donthaveaccount">Don\'t have an account yet? Register with email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="facebook_app_id">392729354670177</string>
    <string name="fb_login_protocol_scheme">fb392729354670177</string>
    <string name="listitem">List Item</string>
    <string name="kcal">100 kcal</string>
    <string name="foodname">Food Name</string>

    <!--Add Food-->
    <string name="display_kcal_per_100g">%,.0f kcal per 100g</string>
    <string name="display_current_carbs">%,.0fg of Carbs</string>
    <string name="display_current_proteins">%,.0fg of Proteins</string>
    <string name="display_current_fats">%,.0fg of Fats</string>

    <string name="format_grams">%,.0f g</string>
    <string name="format_total_kcal">%,.0f kcal</string>
    <string name="format_double">%,.0f</string>
    <string name="format_percent">%d %%</string>

    <!--LABELS-->
    <string name="label_carbs">Carbs</string>
    <string name="label_proteins">Proteins</string>
    <string name="label_fats">Fats</string>
    <string name="label_total">Total</string>
    <string name="label_kcal">kcal</string>


    <!--Labels for fragments-->
    <string name="search">Search</string>
    <string name="search_food">Search Food</string>
    <string name="add_food">Add Food</string>
    <string name="food_macros">Food Macros</string>
    <string name="select_date">Select Date</string>

    <!--Search-->
    <string name="food_not_found">Food not found.</string>


</resources>
