<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout_login">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Auth.LoginFragment">

        <TextView
                android:text="@string/donthaveaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/to_register_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textStyle="bold"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/login_button_view"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/login_email_view"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:hint="@string/email"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/login_password_view" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/login_email_view" android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password"/>
        <TextView
                android:text="LOGO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="36sp"
                android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_view" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/login_password_view"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>