<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout_register">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.RegisterFragment">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:hint="@string/email"
                android:id="@+id/register_email_view"
                style="@style/style_auth_field"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/password"
                android:id="@+id/register_password_view"
                style="@style/style_auth_field" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/register_email_view"/>
        <TextView
                android:text="LOGO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="36sp"
                android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/register_passwordconf_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/confirm_password"
                style="@style/style_auth_field" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/register_password_view"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/register"
                android:fontFamily="@font/roboto_medium"
                android:padding="10dp"
                app:cornerRadius="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/register_passwordconf_view"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>